Fix invest hero cut off text

--- a/core/sass/pages/invest/_landing-page.scss
+++ b/core/sass/pages/invest/_landing-page.scss
@@ -7,6 +7,22 @@
 
 .invest-landing-page {
 
+  .great-hero-with-cta {
+
+    .button-arrow-small{
+      margin: 0;
+    }
+
+    h1.heading-xlarge {
+      margin-bottom: $spacing-4;
+    }
+
+    p.margin-bottom-45 {
+      margin-bottom: $spacing-4;
+    }
+
+  }
+
   .landing-page-how-we-help {
 
     ul {
